k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restoactif-gitops
  namespace: laravel
spec:
  replicas: 2
  selector:
    matchLabels: { app: restoactif-gitops }
  template:
    metadata:
      labels: { app: restoactif-gitops }
    spec:
      containers:
      - name: app
        image: bayord/restoactif-gitops:6e658293ef858029cc958138851bfa3fa17c8643
        ports: [{ containerPort: 80 }]
        livenessProbe:
          httpGet: { path: /, port: 80 }
          initialDelaySeconds: 30
        readinessProbe:
          httpGet: { path: /, port: 80 }
          initialDelaySeconds: 10
        resources:
          requests: { cpu: 100m, memory: 256Mi }
          limits: { cpu: 500m, memory: 512Mi }
