k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: laravel-app
  namespace: laravel
spec:
  selector: { app: laravel-app }
  ports: [{ port: 80, targetPort: 80 }]
