k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: laravel-ingress
  namespace: laravel
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
  - host: laravel.98.81.191.35.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: restoactif-gitops
            port: { number: 80 }
